ui:注册提示信息修改
Signed-off-by: pt3155420267 <3155420267@qq.com>

--- a/packages/ui-default/templates/user_register.html
+++ b/packages/ui-default/templates/user_register.html
@@ -3,7 +3,7 @@
 <div class="row"><div class="columns">
   <div class="immersive--content immersive--center">
     <h1>{{ _('Sign Up') }}</h1>
-    <center><p>外校同学请加入QQ群联系oj管理员说明用意，由管理员后台注册</p></center>
+    <center><p>注册时请认真填写学校等相关信息，学号功能暂未开发完毕，学号可随意填一个五位数。</p></center>
     <hr>
     <form method="POST" captcha>
       <div class="row"><div class="columns">
