--- a/packages/ui-default/templates/manage_base.html
+++ b/packages/ui-default/templates/manage_base.html
@@ -17,6 +17,9 @@
             {{ sidemenu.render_item(null, 'manage_user_import') }}
             {{ sidemenu.render_item(null, 'manage_setting') }}
             {{ sidemenu.render_item(null, 'manage_config') }}
+            {{ sidemenu.render_item(null, 'manage_student_import') }}
+            {{ sidemenu.render_item(null, 'manage_teacher_register') }}
+            {{ sidemenu.render_item(null, 'manage_user_changepassword') }}
           </ol>
         </li>
       </ol>
