--- a/packages/ui-default/templates/ranking.html
+++ b/packages/ui-default/templates/ranking.html
@@ -5,6 +5,22 @@
 <div class="row">
   <div class="medium-12 columns">
     <div class="section">
+        <div class="section__header">
+          <h1 class="section__title" style="color: red;">温馨提示</h1>
+        </div>
+        <div class="section__body">
+          <span>抄袭、复制题解、使用搜索引擎等，以达到刷 AC 率/ AC 数量 / 排名或其他目的的行为，在OJ上是严格禁止的。</span>
+          <br>
+          <span>我们非常重视学术诚信。此类行为将会导致您的账号被永久封禁，并清除所有做题记录。</span>
+          <br>
+          <br>
+          <span>排名权重根据做题量、所完成题目的难度、比赛参与度、出题数、在线活跃度等多个方面综合计算而成。</span>
+          <br>
+          <br>
+          <span>信息学竞赛奖项认证|数据来源：</span><li class="chip-list__item"><a class="typo-a" href="https://oier.ptezoj.com/" target="_blank">莆田市信息学竞赛OIerDb</a></li><span>、</span><li class="chip-list__item"><a class="typo-a" href="https://www.noi.cn/" target="_blank">全国青少年信息学奥林匹克竞赛官网</a></li>
+        </div>
+    </div>
+    <div class="section">
       <div class="section__body no-padding">
         <div data-fragment-id="ranking">
           {% if not udocs.length %}
