ui:改学校颜色为紫色
Signed-off-by: pt3155420267 <3155420267@qq.com>

--- a/packages/ui-default/misc/typography.styl
+++ b/packages/ui-default/misc/typography.styl
@@ -482,7 +482,7 @@ textarea
 .text-badge
   display: inline-block
   padding: 0 5px 0 5px
-  background-color: #6495ed
+  background-color: purple
   color: white
 
 @font-face
