--- a/packages/ui-default/templates/ranking.html
+++ b/packages/ui-default/templates/ranking.html
@@ -17,7 +17,7 @@
           <span>排名权重根据做题量、所完成题目的难度、比赛参与度、出题数、在线活跃度等多个方面综合计算而成。</span>
           <br>
           <br>
-          <span>信息学竞赛奖项认证|数据来源：</span><li class="chip-list__item"><a class="typo-a" href="https://oier.ptezoj.com/" target="_blank">莆田市信息学竞赛OIerDb</a></li><span>、</span><li class="chip-list__item"><a class="typo-a" href="https://www.noi.cn/" target="_blank">全国青少年信息学奥林匹克竞赛官网</a></li>
+          <span>信息学竞赛奖项认证|数据来源：</span><li class="chip-list__item"><a class="typo-a" href="http://oier.ptezoj.com/" target="_blank">莆田市信息学竞赛OIerDb</a></li><span>、</span><li class="chip-list__item"><a class="typo-a" href="https://www.noi.cn/" target="_blank">全国青少年信息学奥林匹克竞赛官网</a></li>
         </div>
     </div>
     <div class="section">
